   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - API changes
        - Added a Router#getMatchingMode(Restlet) method which returns
          the default matching mode for the Router, except for target 
          that are instances of Directory or Router, where the 
          MODE_STARTS_WITH value is returned.
          Reported by Rhett Sutphin and Masaki Sudo.
    - Enhancements
        - UniformResource#doCatch now extract the cause exception from
          caught ResourceException instance for easier debugging.
    - Bugs fixed
        - Fixed compilation issue in the ClientResource class for the
          GWT edition. Reported by Laszlo Megyer. 
        - Fixed internal client connector that removes the query part 
          of the target resource reference.
          Reported by Laurent Rustuel.
        - Fixed internal connector that was not setting properly the 
          ServerInfo. Reported by Laurent Rustuel.
        - Fixed regression when tunnelling user agent properties.
          Reported by Fabian Mandelbaum.
        - The 0 value of the "TimeToLive" parameter for the client 
          connectors was badly taken into account when setting the 
          expiration date. Reported by Fabian Mandelbaum.
        - Issue with line breaks that were removed when PUTting 
          a file. Contributed by Daniel Truemper.
        - Precondition check was wrong for 'if-unmodified-since' if
          dates were equals. Reported by Andreas Schneider.
    - Misc
        - 
        
- 2.0 Milestone 7 (2010-01-29)
    - API changes
        - Added more specific Validator#validatePresence and 
          validateFormat methods.
        - Added Protocol#SIP and SIPS constants.
        - Added Response#abort() and Request#abort() methods.
        - Added Response#commit() and Request#commit(Response) methods
          to support provisional responses and asynchronous replies.